// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<forwardRef<Button>
  priority="primary"
  size="large"
>
  <Button
    align="center"
    disabled={false}
    forwardRef={null}
    priority="primary"
    size="large"
  >
    <StyledButton
      aria-disabled={false}
      aria-label="Button"
      disabled={false}
      forwardRef={null}
      onClick={[Function]}
      priority="primary"
      role="button"
      size="large"
    >
      <Component
        aria-disabled={false}
        aria-label="Button"
        className="css-1bbx5hm-StyledButton edwq9my0"
        forwardRef={null}
        onClick={[Function]}
        role="button"
        size="large"
      >
        <button
          aria-disabled={false}
          aria-label="Button"
          className="css-1bbx5hm-StyledButton edwq9my0"
          onClick={[Function]}
          role="button"
          size="large"
        >
          <ButtonLabel
            align="center"
            priority="primary"
            size="large"
          >
            <Component
              align="center"
              className="css-ym5hp1-ButtonLabel edwq9my1"
              priority="primary"
              size="large"
            >
              <span
                className="css-ym5hp1-ButtonLabel edwq9my1"
              >
                Button
              </span>
            </Component>
          </ButtonLabel>
        </button>
      </Component>
    </StyledButton>
  </Button>
</forwardRef<Button>>
`;

exports[`Button renders disabled normal link 1`] = `
<forwardRef<Button>
  href="/some/relative/url"
>
  <Button
    align="center"
    disabled={false}
    forwardRef={null}
    href="/some/relative/url"
  >
    <StyledButton
      aria-disabled={false}
      aria-label="Normal Link"
      disabled={false}
      forwardRef={null}
      href="/some/relative/url"
      onClick={[Function]}
      role="button"
    >
      <Component
        aria-disabled={false}
        aria-label="Normal Link"
        className="css-1c2phb1-StyledButton edwq9my0"
        forwardRef={null}
        href="/some/relative/url"
        onClick={[Function]}
        role="button"
      >
        <a
          aria-disabled={false}
          aria-label="Normal Link"
          className="css-1c2phb1-StyledButton edwq9my0"
          href="/some/relative/url"
          onClick={[Function]}
          role="button"
        >
          <ButtonLabel
            align="center"
          >
            <Component
              align="center"
              className="css-zmpclt-ButtonLabel edwq9my1"
            >
              <span
                className="css-zmpclt-ButtonLabel edwq9my1"
              >
                Normal Link
              </span>
            </Component>
          </ButtonLabel>
        </a>
      </Component>
    </StyledButton>
  </Button>
</forwardRef<Button>>
`;

exports[`Button renders normal link 1`] = `
<forwardRef<Button>
  href="/some/relative/url"
>
  <Button
    align="center"
    disabled={false}
    forwardRef={null}
    href="/some/relative/url"
  >
    <StyledButton
      aria-disabled={false}
      aria-label="Normal Link"
      disabled={false}
      forwardRef={null}
      href="/some/relative/url"
      onClick={[Function]}
      role="button"
    >
      <Component
        aria-disabled={false}
        aria-label="Normal Link"
        className="css-1c2phb1-StyledButton edwq9my0"
        forwardRef={null}
        href="/some/relative/url"
        onClick={[Function]}
        role="button"
      >
        <a
          aria-disabled={false}
          aria-label="Normal Link"
          className="css-1c2phb1-StyledButton edwq9my0"
          href="/some/relative/url"
          onClick={[Function]}
          role="button"
        >
          <ButtonLabel
            align="center"
          >
            <Component
              align="center"
              className="css-zmpclt-ButtonLabel edwq9my1"
            >
              <span
                className="css-zmpclt-ButtonLabel edwq9my1"
              >
                Normal Link
              </span>
            </Component>
          </ButtonLabel>
        </a>
      </Component>
    </StyledButton>
  </Button>
</forwardRef<Button>>
`;

exports[`Button renders react-router link 1`] = `
<forwardRef<Button>
  to="/some/route"
>
  <Button
    align="center"
    disabled={false}
    forwardRef={null}
    to="/some/route"
  >
    <StyledButton
      aria-disabled={false}
      aria-label="Router Link"
      disabled={false}
      forwardRef={null}
      onClick={[Function]}
      role="button"
      to="/some/route"
    >
      <Component
        aria-disabled={false}
        aria-label="Router Link"
        className="css-1c2phb1-StyledButton edwq9my0"
        forwardRef={null}
        onClick={[Function]}
        role="button"
        to="/some/route"
      >
        <Link
          aria-disabled={false}
          aria-label="Router Link"
          className="css-1c2phb1-StyledButton edwq9my0"
          onClick={[Function]}
          onlyActiveOnIndex={false}
          role="button"
          style={Object {}}
          to="/some/route"
        >
          <a
            aria-disabled={false}
            aria-label="Router Link"
            className="css-1c2phb1-StyledButton edwq9my0"
            onClick={[Function]}
            role="button"
            style={Object {}}
          >
            <ButtonLabel
              align="center"
            >
              <Component
                align="center"
                className="css-zmpclt-ButtonLabel edwq9my1"
              >
                <span
                  className="css-zmpclt-ButtonLabel edwq9my1"
                >
                  Router Link
                </span>
              </Component>
            </ButtonLabel>
          </a>
        </Link>
      </Component>
    </StyledButton>
  </Button>
</forwardRef<Button>>
`;
